[package]
name = "mimc-wasm"
version = "0.2.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
mimc = { path = "../mimc/" }
